--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -5,7 +5,7 @@
 </ol>
 
 <ol>
-    <% answers.forEach(function(answer)  %>
+    <% answers.forEach(function(answer) { %>
         <li><%= answer %></li>
-   <% } %>
+   <% }) %>
 </ol>
